Fixes #126 - Fixed home page hero heading display on small-medium screens

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -63,7 +63,7 @@
 
 #hero-download h1 > span
 {
-  float: left;
+  display: inline-block;
 }
 
 #hero-download-tos
